--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pytest = "*"
-mypy = "*"
+
 
 [dev-packages]
+pytest = "*"
+pydantic = "*"
+mypy = "*"
 
 [requires]
 python_version = "3.10"
