--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         run: pipenv install --dev
 
       - name: Check Types
-        run: pipenv run mypy
+        run: pipenv run mypy .
         
       - name: Run Tests
         run: pipenv run pytest
